--- a/paign/index.html
+++ b/paign/index.html
@@ -334,9 +334,9 @@ padding: 1px;background: blueviolet;
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <center>
-                        <h2>Game sensivity</h2>
-                    </center>
+
+                    <h2 class="text-center">Game sensivity</h2>
+
                     <div class="col-sm-3">
                         <h2>Pubg Pc</h2>
                         <table style="width:100%">
